rancher/deploy/ververica/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ververica-platform-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
spec:
  tls:
    - hosts:
        - streams.nephelai.io
      secretName: streams.nephelai.io
  rules:
    - host: streams.nephelai.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ververica-ververica-platform
                port:
                  number: 80
